# devizahitel-copilot

./: .env.example  .gitignore  ACTION_STEPS_FOR_BANK_VICTIM.md  CHANGE_SUMMARY.md  Cargo.toml  LOCAL_SERVER_GUIDE.md  OCR_USER_GUIDE.md  OPEN_SOURCE_GUIDE.md  PRD.md  README.md  SETUP.md  SYSTEM_CHARTER.md  SYSTEM_UPDATES_LOG.md  SYSTEM_WORKFLOW.md  limitation_periods_analysis.md  start.sh  start_ai.sh  test_ai_system.sh  test_document_processing.py  test_pipeline.sh  test_system.sh  verify_setup.sh
.claude/: settings.local.json
Precedents/: Foreign Currency Mortageg Crisis.md  Foreign Currency Mortgage Crisis_ Comprehensive Le.md  foreign_currency_mortgage_cases.csv  hungary-expert.md  national_responses_fx_mortgages.csv
SEC/: Central and Eastern European Foreign Currency Mort.md  Foreign Currency Mortgage and Loan Scandal Involvi.md
migrations/: 001_initial_schema.sql  001_initial_schema_sqlite.sql
mistral_ocr_processor/: .env.example  PROGRESS.md  README.md  config.py  fallback_ocr.py  filename_utils.py  main.py  mistral_client.py  output_manager.py  pdf_processor.py  process_failed_files.py  process_large_files.py  requirements.txt
mistral_ocr_processor/ocr_output_retry/: filename_mappings.txt  processing_summary.md
scripts/: populate_precedents.rs
src/: main.rs  main_ai_simple.rs.backup  main_dynamic.rs  main_simple.rs
src/ai/: case_analyzer.rs  file_watcher.rs  mistral_client.rs  mod.rs
src/api/: case_analysis.rs  cases.rs  documents.rs  health.rs  mod.rs  (+1 more)
static/: demo.html  index.html  index_hardcoded.html
tests/: pipeline_integration_test.rs
(+18 files in other folders)
