[package]
name = "devizahitel_legal_research"
version = "0.1.0"
edition = "2021"
description = "Legal research system for foreign currency mortgage cases"

[dependencies]
# Web framework
actix-web = "4.8"
actix-files = "0.6"
actix-cors = "0.7"

# Database and ORM
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for embeddings API
reqwest = { version = "0.12", features = ["json"] }

# Text processing
regex = "1.10"
unicode-segmentation = "1.10"

# Environment variables
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# CSV parsing for precedent data
csv = "1.3"

# Base64 encoding for documents
base64 = "0.22"

# Text similarity and embeddings
ndarray = "0.15"

# HTML generation for UI
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"

# File handling
mime = "0.3"
tempfile = "3.8"

# OCR integration (placeholder for tesseract)
# Note: Add OCR dependencies as needed